tests/invalid/trait/self_assoc_outside_trait.facet
fn main() -> unrestricted Self::Item {
  ()
}
